rework data storage and create .py file

--- a/paper.ipynb
+++ b/paper.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 1,
       "metadata": {
         "id": "EyD2S81EC5yq"
       },
@@ -21,18 +21,11 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from tqdm import tqdm\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
         "import warnings\n",
-        "import statsmodels.formula.api as smf\n",
-        "from collections import Counter, defaultdict\n",
-        "from sklearn.decomposition import PCA\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
         "from nltk.stem import PorterStemmer\n",
-        "ps = PorterStemmer()\n",
-        "\n",
-        "rankings = {'Easy': 1, 'Medium': 2, 'Hard': 3}\n"
+        "ps = PorterStemmer()"
       ]
     },
     {
@@ -46,12 +39,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 2,
       "metadata": {
         "id": "nihQIHADDzEH"
       },
       "outputs": [],
       "source": [
+        "def create_new_data_path(path = \"new_data\"):\n",
+        "    if not os.path.isdir(path):\n",
+        "        os.makedirs(path)\n",
+        "    return path\n",
+        "\n",
         "def cosine_similarity(v1, v2):\n",
         "  v1 = np.array(v1).flatten()\n",
         "  v2 = np.array(v2).flatten()\n",
@@ -96,7 +94,9 @@
         "        values[f].append(None)\n",
         "  return values.values()\n",
         "\n",
-        "def load_online_data(online_path = \"./data/online.csv\"):\n",
+        "def load_online_data(out_path: str, online_path = \"./data/online.csv\"):\n",
+        "  rankings = {'Easy': 1, 'Medium': 2, 'Hard': 3}\n",
+        "\n",
         "  online = pd.read_csv(online_path)\n",
         "  online['Ranking'] = online['Level'].apply(lambda x: rankings[x])\n",
         "  online_clues = online.loc[:, ['wordpair_id', 'gameID', 'clueOption1', 'clueOption2', 'clueOption3', 'clueOption4', 'clueOption5', 'clueOption6', 'clueOption7', 'clueOption8', 'clueFinal', 'Acc', 'Level', 'Ranking']]\n",
@@ -104,7 +104,7 @@
         "  online_clues['Number of Clues'] = [len(online_unique_clues.loc[i,:].dropna().to_list()) for i in range(len(online_clues))]\n",
         "  online_guesses = online.loc[:, ['wordpair_id', 'gameID', 'GuessOption1', 'GuessOption2', 'GuessOption3', 'GuessOption4', 'GuessOption5', 'GuessOption6', \n",
         "                                  'GuessOption7', 'GuessOption8', \"target1\", \"target2\"]]\n",
-        "  online.to_csv(r\"./data/candidate-generation.csv\", index = False)\n",
+        "  online.to_csv(os.path.join(out_path, \"candidate-generation.csv\"), index = False)\n",
         "  return online, online_clues, online_unique_clues, online_guesses\n",
         "\n",
         "def load_embeddings_data(swow_path = \"./data/swow_embeddings.csv\"):\n",
@@ -113,12 +113,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
+        "new_data_path = create_new_data_path()\n",
+        "\n",
         "########### Extract Online\n",
-        "online, online_clues, online_unique_clues, online_guesses = load_online_data()\n",
+        "online, online_clues, online_unique_clues, online_guesses = load_online_data(out_path=new_data_path)\n",
         "\n",
         "#glove_path = parentdirectory + \"glove_embeddings.csv\"\n",
         "swow = load_embeddings_data()"
@@ -150,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 4,
       "metadata": {
         "id": "WgLWjXjsCxiV"
       },
@@ -222,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -235,16 +237,16 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1456/1456 [00:02<00:00, 674.28it/s]\n"
+            "100%|██████████| 1456/1456 [00:02<00:00, 665.72it/s]\n"
           ]
         }
       ],
       "source": [
         "patch1 = _patch1()\n",
-        "patch1.to_csv(r\"./data/in_out_transitions.csv\", index = False)\n",
+        "patch1.to_csv(os.path.join(new_data_path, \"in_out_transitions.csv\"), index = False)\n",
         "\n",
         "movement1 = _determine_movement(patch1, 'NumberOfUniqueClues')\n",
-        "movement1.to_csv(r\"./data/patch_words.csv\", index = False)"
+        "movement1.to_csv(os.path.join(new_data_path, \"patch_words.csv\"), index = False)"
       ]
     },
     {
@@ -256,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -264,9 +266,9 @@
         "  swow_similarity: pd.DataFrame = None\n",
         "\n",
         "  def __init__(self, \n",
-        "               clue: pd.DataFrame = online_unique_clues, \n",
-        "               emb_class: pd.DataFrame = swow):\n",
-        "    self.processed_path = \"./data\"\n",
+        "               processed_path: str = new_data_path,\n",
+        "               clue: pd.DataFrame = online_unique_clues):\n",
+        "    self.processed_path = processed_path\n",
         "    self.clue = clue\n",
         "    self.melted_clue = self._melt_clue()\n",
         "    self.embeddings = self._create_embeddings()\n",
@@ -334,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
