--- a/paper.ipynb
+++ b/paper.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 12,
       "metadata": {
         "id": "EyD2S81EC5yq"
       },
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 13,
       "metadata": {
         "id": "nihQIHADDzEH"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -175,20 +175,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 15,
       "metadata": {
         "id": "WgLWjXjsCxiV"
       },
       "outputs": [],
       "source": [
         "class PatchForaging:\n",
-        "  def __init__(self, online: pd.DataFrame = online, patch_name:str = \"in_out_transitions.csv\", movement_name: str = \"patch_words.csv\"):\n",
+        "  def __init__(self, online: pd.DataFrame = online, patch_name:str = \"patch_words.csv\", movement_name: str = \"in_out_transitions.csv\"):\n",
         "    \"\"\"Initialize variables and run methods to create data\n",
         "\n",
         "    Args:\n",
         "        online (pd.DataFrame, optional): online data. Defaults to online.\n",
-        "        patch_name (str, optional): name of the patch data file to be saved. Defaults to \"in_out_transitions.csv\".\n",
-        "        movement_name (str, optional): name of the movement data file to be saved. Defaults to \"patch_words.csv\".\n",
+        "        patch_name (str, optional): name of the patch data file to be saved. Defaults to \"patch_words.csv\".\n",
+        "        movement_name (str, optional): name of the movement data file to be saved. Defaults to \"in_out_transitions.csv\".\n",
         "    \"\"\"\n",
         "    self.patch_path = os.path.join(new_data_path, patch_name)\n",
         "    self.movement_path = os.path.join(new_data_path, movement_name)\n",
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,7 +304,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1456/1456 [00:04<00:00, 358.28it/s]\n"
+            "100%|██████████| 1456/1456 [00:04<00:00, 302.21it/s]\n"
           ]
         }
       ],
@@ -321,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -421,14 +421,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "4821it [00:12, 382.07it/s]\n"
+            "4821it [00:19, 248.93it/s]\n"
           ]
         }
       ],
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -617,7 +617,7 @@
               "[4821 rows x 7 columns]"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -634,8 +634,12 @@
       "name": "paper.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "148bea8a8c99a57e35cbe6f15c85ca52b486fdd4745b8e470a5b94b9ab81b64f"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.12 ('CogSci2022-Connector')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
